Show Done button instead of closing for better UX

--- a/src/components/DialogBar/index.module.css
+++ b/src/components/DialogBar/index.module.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   padding: 1rem;
   border-bottom: 1px solid #f1f1f1;
+  min-height: 59px;
 }
 
 .dialogBarTitle {
