--- a/src/components/HelpMessage/index.module.css
+++ b/src/components/HelpMessage/index.module.css
@@ -1,10 +1,10 @@
-.spinner {
+.helpMessage {
   padding: 1rem;
   background-color: #ffffff;
   border: 1px solid #f1f1f1;
   border-radius: 0.25rem;
 }
 
-.spinnerText {
+.helpMessageText {
   font-size: 1rem;
 }
