Add an ability to render players cards as links

--- a/src/components/PlayerCard/index.module.css
+++ b/src/components/PlayerCard/index.module.css
@@ -7,3 +7,10 @@
 .playerRoundBorders {
   border-radius: 0.25rem;
 }
+
+.playerLink {
+  display: block;
+  text-decoration: none;
+  color: #000000;
+  width: 100%;
+}
